Name:          stuntsemulator
Version:       0.1
Cabal-Version: >= 1.2
Synopsis:      A revival of the classic game Stunts (8086 CPU and DOS emulation)
Category:      Graphics, Game
Author:        Péter Diviánszky
Maintainer:    divipp@gmail.com
Copyright:     (c) 2014-2015, Péter Diviánszky and Csaba Hruska
License:       BSD3
License-File:  LICENSE
Stability:     experimental
Build-Type:    Simple
Extra-Source-Files:
  Utils/Compare.hs
  Utils/Parse.hs

Executable stuntsemulator
  HS-Source-Dirs: .
  other-modules:
    CPU
    DeBruijn
    Dos
    Edsl
    Emulate
    GUI
    Helper
    MachineState
  Main-IS:        Main.hs
  GHC-Options:  -Wall
                -fno-warn-type-defaults
                -fno-warn-missing-signatures
                -fno-warn-incomplete-patterns
                -fno-warn-unused-matches
                -fno-warn-name-shadowing
--                -fno-warn-unticked-promoted-constructors
                -rtsopts
  Extensions:
    NoMonomorphismRestriction, ScopedTypeVariables,
    ViewPatterns, PatternGuards, PatternSynonyms, LambdaCase, RecordWildCards, BangPatterns, RecursiveDo,
    RankNTypes, GADTs, TypeFamilies, DataKinds,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts

  Build-Depends:  base >= 4 && < 5
                , mtl
                , transformers
                , lens
                , deepseq
                , containers
                , vector
                , bytestring
                , directory
                , filepath
                , Glob
--                , cmdargs
                , hdis86
                , OpenGLRaw
                , GLFW-b
                , ALUT

